--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -303,6 +303,7 @@ Full-Width Styles
   font-size: 42px;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
+  background:url('../images/logo2.png') no-repeat;
 }
 
 #project_tagline {
